# zzadmin_backend

./: .env.example  .flake8  .gitignore  .pylintrc  CODE_OPTIMIZATION_GUIDE.md  CONTRIBUTING.md  DEPLOYMENT.md  LICENSE  OPTIMIZATION_GUIDE.md  README.md  README_API_INTEGRATION.md  README_FORMATTER.md  frontend_api_integration_guide.md  gunicorn_config.py  manage.py  pyproject.toml  pytest.ini  requirements.txt  start_backend.bat  start_frontend.ps1  update_project.bat  update_project.sh  update_submenu_icons.py
backend_management/: __init__.py  asgi.py  celery.py  middleware.py  settings.py  urls.py  wsgi.py
common/: README.md  __init__.py  exceptions.py  handlers.py  pagination.py  response.py  views.py
common/utils/: __init__.py  cache.py  date.py  string.py
dashboard/: admin.py  consumers.py  filters.py  permissions.py  routing.py  tasks.py  urls.py
dashboard/middleware/: __init__.py  api_permission_middleware.py  auth_middleware.py  exception_middleware.py  request_preprocessing.py  tenant_middleware.py  websocket_middleware.py  whitelist_middleware.py
dashboard/migrations/: 0001_initial.py  0002_role_permissions.py  0003_apiwhitelist_loginlog_post_department_email_and_more.py  0004_apiwhitelist_created_by_apiwhitelist_deleted_at_and_more.py  0005_alter_department_status.py  0006_alter_post_status_menubutton_alter_role_permissions.py  (+17 more)
docs/: API_REFERENCE.md  API_TEST_BEST_PRACTICES.md  CODE_QUALITY_GUIDE.md  DEVELOPMENT_GUIDE.md  DEVOPS_PIPELINE.md  EXCEPTION_HANDLING_OPTIMIZATION.md  README.md  TEST_GUIDE.md  USAGE_GUIDE.md  backend_management_system.code-workspace
monitor/: urls.py
tests/: conftest.py
(+115 files in other folders)
